# heor-HEmodeling-MDP-AI-agent

./: AGENTS.md  README.md  pyproject.toml
docs/: architecture_overview.md  mdp_schema.json  mdp_template.md
examples/materials/: cem_publication_example.md  hta_appraisal_example.txt
examples/output/: mdp_draft.json  mdp_draft.md  retrieved_index.json
src/drafting/: __init__.py  drafter.py
src/gap_check/: __init__.py  checker.py
src/ingest/: __init__.py  loader.py
src/mdp_agent/: __init__.py  cli.py  models.py  pipeline.py
src/questioning/: __init__.py  generator.py
src/retrieval/: __init__.py  simple_retriever.py
src/schemas/: __init__.py  mdp_template.py
tests/: test_pipeline.py  test_retrieval.py
