[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdp-agent"
version = "0.1.0"
description = "v1 MDP agent scaffold for HEOR model design planning"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "heor-HEmodeling-MDP-AI-agent"}]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
